--- a/CNS/SDC-符号位数赋值/view/diamondsXib.xib
+++ b/CNS/SDC-符号位数赋值/view/diamondsXib.xib
@@ -11,7 +11,7 @@
             <rect key="frame" x="0.0" y="0.0" width="120" height="60"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <subviews>
-                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="visualImage5" translatesAutoresizingMaskIntoConstraints="NO" id="TF0-oG-yyQ" customClass="diamond">
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="visualImage5" translatesAutoresizingMaskIntoConstraints="NO" id="TF0-oG-yyQ">
                     <rect key="frame" x="0.0" y="0.0" width="60" height="60"/>
                 </imageView>
                 <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="G1M-CW-BHF">
